test/fail/Imports/Level.agda
------------------------------------------------------------------------
-- Universe levels
------------------------------------------------------------------------

module Imports.Level where

open import Agda.Prim using (Level; _⊔_) renaming (lzero to zero; lsuc to suc)

